--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-</head>
-<body>
-  <script type="module" src="main.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Up On</title>
+    <link rel="icon" type="image/x-icon" href="assets/up_on_logo.png" />
+  </head>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li>
+            <a href="#timeline">
+              <img src="assets\up_on_logo.png" alt="up_on_logo" />
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main id="root">
+      <h1>welcome</h1>
+    </main>
+    <footer>
+      <nav>
+        <ul class="icons">
+          <li>
+            <a href="#timeline">
+              <img src="assets/home.png" alt="home" />
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="assets/search.png" alt="search" />
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </footer>
+    <script type="module" src="main.js"></script>
+  </body>
 </html>
