fix - change in folders structure and creation of css files

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@
     <link rel="icon" type="image/x-icon" href="assets/up_on_logo.png" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav>
-        <ul>
+        <ul class="headerMenu">
           <li>
             <a href="#timeline">
               <img src="assets\up_on_logo.png" alt="up_on_logo" />
@@ -23,9 +23,9 @@
     <main id="root">
       <h1>welcome</h1>
     </main>
-    <footer>
+    <footer class="footer">
       <nav>
-        <ul class="icons">
+        <ul class="footerMenu">
           <li>
             <a href="#timeline">
               <img src="assets/home.png" alt="home" />
