--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./pages/login/login.css" />
     <title>Up On</title>
     <link rel="icon" type="image/x-icon" href="assets/up_on_logo.png" />
   </head>
@@ -20,9 +21,7 @@
         </ul>
       </nav>
     </header>
-    <main id="root">
-      <h1>welcome</h1>
-    </main>
+    <main id="root"></main>
     <footer class="footer">
       <nav>
         <ul class="footerMenu">
