--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       <nav>
         <ul class="headerMenu">
           <li>
-            <a href="#timeline">
+            <a href="#">
               <img src="assets\up_on_logo.png" alt="up_on_logo" />
             </a>
           </li>
@@ -31,7 +31,7 @@
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#search">
               <img src="assets/search.png" alt="search" />
             </a>
           </li>
