--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="./pages/login/login.css" />
+    <link rel="stylesheet" href="./pages/login/register.css" />
     <title>Up On</title>
     <link rel="icon" type="image/x-icon" href="assets/up_on_logo.png" />
   </head>
