--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
       <nav>
         <ul class="headerMenu">
           <li>
-            <a href="#">
+            <a href="#login.js">
               <img src="assets\up_on_logo.png" alt="up_on_logo" />
             </a>
           </li>
