--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="./pages/login/login.css" />
     <link rel="stylesheet" href="./pages/login/register.css" />
+    <link rel="stylesheet" href="./pages/timeline/timeline.css" />
     <title>Up On</title>
     <link rel="icon" type="image/x-icon" href="assets/up_on_logo.png" />
   </head>
@@ -23,8 +24,9 @@
       </nav>
     </header>
     <main id="root"></main>
-    <footer class="footer">
-      <nav>
+    <footer>
+      <button class="createButton"><img src="./assets/create.png"></button>
+      <nav class="footer">
         <ul class="footerMenu">
           <li>
             <a href="#timeline">
